center-align fix

--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ body{
   max-width:960px;
   padding-left:1rem;
   padding-right:1rem;
-  margin:auto;
-  
+  margin:auto; 
 }
 
 .fullscreen-video-wrap{
@@ -74,6 +73,13 @@ body{
   padding-bottom: 2rem;
 }
 
+.btn{
+  background: #34b3a0;
+  color:#fff;
+  font-size:1.2rem;
+  padding: 1rem 2rem;
+  text-decoration: none;
+}
 
 .section{
   padding:20px 0;
